@@ -1,5 +1,5 @@
 /////////////////////////////////////////////////////////////////////////
-// $Id: harddrv.cc,v 1.172 2006-06-16 07:29:33 vruppert Exp $
+// $Id: harddrv.cc,v 1.173 2006-06-17 07:45:27 vruppert Exp $
 /////////////////////////////////////////////////////////////////////////
 //
 //  Copyright (C) 2002  MandrakeSoft S.A.
@@ -143,7 +143,7 @@ void bx_hard_drive_c::init(void)
   char  ata_name[20];
   bx_list_c *base;
 
-  BX_DEBUG(("Init $Id: harddrv.cc,v 1.172 2006-06-16 07:29:33 vruppert Exp $"));
+  BX_DEBUG(("Init $Id: harddrv.cc,v 1.173 2006-06-17 07:45:27 vruppert Exp $"));
 
   for (channel=0; channel<BX_MAX_ATA_CHANNEL; channel++) {
     sprintf(ata_name, "ata.%d.resources", channel);
@@ -366,7 +366,7 @@ void bx_hard_drive_c::init(void)
             (image_mode == BX_ATA_MODE_GROWING) || (image_mode == BX_ATA_MODE_UNDOABLE) ||
             (image_mode == BX_ATA_MODE_VOLATILE) || (image_mode == BX_ATA_MODE_VMWARE3) ||
             (image_mode == BX_ATA_MODE_SPARSE)) {
-          geometry_detect = (cyl == 0);
+          geometry_detect = ((cyl == 0) || (image_mode == BX_ATA_MODE_VMWARE3));
           if ((heads == 0) || (spt == 0)) {
             BX_PANIC(("ata%d/%d cannot have zero heads, or sectors/track", channel, device));
           }
@@ -385,9 +385,15 @@ void bx_hard_drive_c::init(void)
           if (geometry_detect) {
             // Autodetect number of cylinders
             disk_size = BX_HD_THIS channels[channel].drives[device].hard_drive->hd_size;
-            cyl = (int)(disk_size / (heads * spt * 512));
-            BX_HD_THIS channels[channel].drives[device].hard_drive->cylinders = cyl;
-            SIM->get_param_num("cylinders", base)->set(cyl);
+            if (image_mode != BX_ATA_MODE_VMWARE3) {
+              cyl = (int)(disk_size / (heads * spt * 512));
+              BX_HD_THIS channels[channel].drives[device].hard_drive->cylinders = cyl;
+              SIM->get_param_num("cylinders", base)->set(cyl);
+            } else {
+              cyl = BX_HD_THIS channels[channel].drives[device].hard_drive->cylinders;
+              heads = BX_HD_THIS channels[channel].drives[device].hard_drive->heads;
+              spt = BX_HD_THIS channels[channel].drives[device].hard_drive->sectors;
+            }
             BX_INFO(("ata%d-%d: autodetect geometry: CHS=%d/%d/%d", channel, device, cyl, heads, spt));
           } else {
             if (disk_size != BX_HD_THIS channels[channel].drives[device].hard_drive->hd_size) {
